--- a/src/components/common-ui/info/info.module.scss
+++ b/src/components/common-ui/info/info.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     gap:20px;
+    margin: 50px 0;
 }
 
 .content {
@@ -10,6 +11,26 @@
 
         & span {
             color:var(--title-color);
+        }
+    }
+
+    .wrapper_social {
+        display: flex;
+        gap:20px;
+        align-items: center;
+
+        .item_social {
+            display: flex;
+            align-items: center;
+            gap:5px;
+            text-decoration: none;
+            color:var(--defaul-text-color);
+            font-size: 16px;
+
+            &:hover {
+                transition: 0.25s ease all;
+                color: var(--title-color);
+            }
         }
     }
 }
