--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body , h1 ,h2 ,h3 ,h4 , p , span {
 body {
   background-color:var(--main-bg-color) ;
   color: var(--defaul-text-color);
+  position: relative;
 }
 
 
