--- a/src/components/base/footer/footer.module.scss
+++ b/src/components/base/footer/footer.module.scss
@@ -3,6 +3,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+}
+
+.footer {
+    // position: absolute;
+    // bottom: 30px;
+    // z-index: 1;
 }
 
 .info {
