--- a/src/components/common-ui/projects/projects.module.scss
+++ b/src/components/common-ui/projects/projects.module.scss
@@ -3,7 +3,7 @@
     // align-items: center;
     // justify-content: center;
     // background-color: #6b46c1;
-    margin: 50px 0;
+    // margin: 50px 0;
   }
   
   .cardGrid {
